# atelier

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  pyproject.toml  setup_repo.sh
agents/: README.md  buyer_agent.py  delete_endpoints.py  hitl_orchestrator.py  register_consolidated_endpoint.py  register_mosaic_agents.py  register_storytelling_agent.py  register_sustainability_agent.py  register_trend_agent.py  serving_smoke_test.py  storytelling_agent.py  sustainability_agent.py  trend_agent.py
databricks/: 01_bronze_ingestion.py  02_silver_transform.py  03_gold_curation.py  04_dlt_pipeline.py  05_vector_search_setup.py  06_predictive_models_mlflow.py  README.md  Vector Search Setup.py
scripts/: ruff_check.sh  validate_env.sh
solace_mesh/: README.md  docker-compose.broker.yml  sam_init.sh
solace_mesh/configs/agents/: buyer_agent.yaml  storytelling_agent.yaml  sustainability_agent.yaml  trend_agent.yaml
solace_mesh/sam_project/: requirements.txt
solace_mesh/sam_project/configs/: shared_config.yaml
solace_mesh/sam_project/configs/agents/: buyer_agent_agent.yaml  main_orchestrator.yaml  storytelling_agent_agent.yaml  sustainability_agent_agent.yaml  trend_agent_agent.yaml
solace_mesh/sam_project/src/: atelier_tools.py
sql/: atelier_unitycatalog-schemas.sql.dbquery.ipynb  manualSQL.sql.dbquery.ipynb
streamlit_app/: README.md  app.py  requirements.txt
tests/: registered_models.ipynb  test_storytelling_agent.ipynb  test_sustainability_agent.ipynb  test_trend_agent.py.ipynb  testing_trend_and_sustainability.ipynb
(+1 files in other folders)
