[project]
name = "atelier-demo"
version = "0.1.0"
description = "ATELIER: conversational AI platform for the fashion industry, open source demo pilot"
requires-python = ">=3.11"
dependencies = [
    "databricks-sql-connector>=3.0.0",
    "databricks-sdk>=0.30.0",
    "databricks-vectorsearch>=0.40",
    "mlflow>=2.14.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langgraph>=0.1.0",
    "scikit-learn>=1.5.0",
    "streamlit>=1.36.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0",
    "requests>=2.32.0",
    "typing_extensions>=4.12.0",
    "solace-agent-mesh>=1.18.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "databricks*", "solace_mesh*", "streamlit_app*"]
